Void Miner JEI Integration

--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -1634,7 +1634,11 @@ gcyl.machine.cracker_unit.name=[Deprecated] Cracking Unit
 gcyl.machine.large_turbine.hot_coolant.name=Hot Coolant Turbine (HCT)
 gcyl.machine.hot_coolant_turbine.description=The Hot Coolant Turbine takes in hot coolant and converts it regular coolant. The rate and power produced from this is based on the rotor holder efficiency and speed.
 gcyl.machine.large_transformer.name=Large Transformer (LT)
-gcyl.machine.void_miner.name=Void Ore Miner (VOM)
+gcyl.machine.void_miner.name=Void Ore Miner MK-I (VOM)
+void_miner_ores.name=Void Miner Ores
+gcyl.jei.void_miner_tier_1=Void Ore Miner I
+gcyl.jei.void_miner_tier_2=Void Ore Miner II
+gcyl.jei.void_miner_tier_3=Void Ore Miner III
 gcyl.multiblock.void_miner.description=The Void Ore Miner produces massive amounts of ores at very fast rates.
 gcyl.machine.industrial_primitive_blast_furnace.name=Industrial Primitive Blast Furnace (IPBF)
 gcyl.machine.advanced_distillation_tower.name=Advanced Distillation Tower (ADT)
@@ -1812,8 +1816,8 @@ gcyl.multiblock.gas_centrifuge.description=The Gas Centrifuge primarily separate
 gcyl.machine.qubit_computer.name=Quantum Computer (QC)
 gcyl.multiblock.qubit_computer.description=Utilizes circuits to produce qubits for advanced machine recipes.
 gcyl.machine.stellar_forge.name=Stellar Forge (SF)
-gcyl.machine.void_miner.uhv.name=Void Ore Miner MK II (VOM)
-gcyl.machine.void_miner.uev.name=Void Ore Miner MK III (VOM)
+gcyl.machine.void_miner.uhv.name=Void Ore Miner MK-II (VOM)
+gcyl.machine.void_miner.uev.name=Void Ore Miner MK-III (VOM)
 gcyl.machine.hyper_reactor.i.name=Hyper Reactor I (HR I)
 gcyl.machine.hyper_reactor.ii.name=Hyper Reactor II (HR II)
 gcyl.machine.hyper_reactor.iii.name=Hyper Reactor III (HR III)
