--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -4654,8 +4654,10 @@ gregtech.multiblock.extreme_diesel_engine.description=The Diesel Engine is a mul
 gcyl.multiblock.electric_blast_furnace.tooltip.1=For every §a900K§7 above the recipe temperature, a multiplicative §a95%%§7 energy multiplier is applied pre-overclocking.
 gcyl.multiblock.electric_blast_furnace.tooltip.2=For every §a1800K§7 above the recipe temperature, one overclock becomes §a100%%§7 efficient.
 gcyl.multiblock.electric_blast_furnace.tooltip.3=For every voltage tier above §aMV§7, temperature is increased by §a100K§7.
-gregtech.multiblock.volcanus.description.1=The Volcanus is built the same as the EBF, but with different casings. It consumes pyrotheum 2^ max voltage tier mB of pyrotheum per tick.
-gregtech.multiblock.volcanus.description.2=Max Overclock Voltage of ZPM. Can run recipes of a higher tier given the right energy hatch, but there are no coil bonuses.
+gregtech.multiblock.volcanus.description.1=Consumes pyrotheum 2^ max voltage tier mB of pyrotheum per tick.
+gregtech.multiblock.volcanus.description.4=Max Overclock Voltage of ZPM.
+gregtech.multiblock.volcanus.description.2=Can run recipes of a higher tier given the right energy hatch, but there are no bonuses.
+gregtech.multiblock.volcanus.description.3=Parallels 8 times. Recipes run 120%% faster. EUt usage is 0.90
 recipemap.volcanus.name=Volcanus
 gcyl.machine.volcanus.name=Volcanus
 gregtech.multiblock.cryogenic_freezer.description=The Cryogenic Freezer is built the same as the Vacuum Freezer, but with different casings. It consumes cryothium 2^ max voltage tier mB of cryotheum per tick.
