--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -4824,9 +4824,11 @@ gcyl.machine.mega_cleanroom.name=Large Cleaning Facility (LCF)
 gcyl.machine.cleanroom.tooltip.1=§bSize: §f21x21x10 to 101x101x101
 gcyl.machine.cleanroom.tooltip.2=§cMay cause performance issues! Read additional structure info.
 gcyl.machine.cleanroom.tooltip.3=§cTo increase performance, the multiblock only checks its structure pattern on forming and when saving the world.
+gcyl.machine.cleanroom.tooltip.7=§aYou can force an update by using a Screwdriver! You must do this everytime you add a new machine!
 gcyl.machine.cleanroom.tooltip.4=§c§lDO NOT TRY TO CHEAT THIS! §r§cDoing so will cause the multiblock to constantly check its structure upon loading into the world, causing major TPS lag until fixed.
 gcyl.machine.cleanroom.tooltip.5=§c§lMake sure the structure is valid if you make changes to the multiblock!
 gcyl.machine.cleanroom.tooltip.6=§aReplace the controller block if you are having issues before reporting a bug!
+gcyl.machine.cleanroom.screwdriver=Updated Structure Pattern and Cleanroom Machines.
 gcyl.recipe.cleanroom_iso_3.display_name=ISO 3 Cleanroom
 gcyl.recipe.cleanroom_iso_2.display_name=ISO 2 Cleanroom
 gcyl.recipe.cleanroom_iso_1.display_name=ISO 1 Cleanroom
