add new reactor coolants

--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -4249,7 +4249,7 @@ gcyl.material.iron_ii_chloride=Iron II Chloride
 gcyl.material.propadiene=Propadiene
 gcyl.material.cyclopentadiene=Cyclopentadiene
 gcyl.material.chloroauric_acid=Chloroauric Acid
-gcyl.material.helium_4=Helium 4
+gcyl.material.helium_4=Helium-4
 gcyl.material.fermionic_uu_matter=Fermionic UU-Matter
 gcyl.material.bosonic_uu_matter=Bosonic UU-Matter
 gcyl.material.free_electrons=Free Electrons
@@ -5185,3 +5185,12 @@ metaitem.generic_circuit.uxv.name=UXV Circuit
 metaitem.generic_circuit.opv.name=OpV Circuit
 metaitem.generic_circuit.max.name=MAX Circuit
 
+gcyl.material.heavy_water=Heavy Water
+gcyl.material.hp_heavy_steam=High Pressure Heavy Steam
+gcyl.material.hot_hp_he_3=Hot High Pressure Helium-3
+gcyl.material.hot_hp_he_4=Hot High Pressure Helium-4
+gcyl.material.hot_sodium=Hot Liquid Sodium
+gcyl.material.hot_mercury=Hot Mercury
+gcyl.material.hot_tin=Hot Liquid Tin
+gcyl.material.hot_lead=Hot Liquid Lead
+gcyl.material.hot_boron_trioxide=Irradiated Hot Liquid Boron Trioxide
