Electrically Wired Petri Dish

--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -311,7 +311,7 @@ metaitem.small.lithium.ion.battery.tooltip=Reusable
 metaitem.nickel.metal.hydride.battery.tooltip=Reusable
 
 
-metaitem.electrically.wired.petri.dish.name=Electricaly Wired Petri Dish
+metaitem.electrically.wired.petri.dish.name=Electrically Wired Petri Dish
 metaitem.neuro.support.unit.name=Neuro Support Unit
 metaitem.cyber.processing.unit.name=Cyber Processing Unit
 metaitem.ultrasonic.homogenizer.name=Ultrasonic Homogenizer
